--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 						</div>
                                     	<div class="form-group">
                                             <label for="email">Usuário</label>
-                                            <input type="text" class="form-control" name="email" id="email" placeholder="Insira o usuário">
+                                            <input type="text" class="form-control" name="email" id="txtUsuario" placeholder="Insira o usuário">
                                         </div>
                                         <div class="form-group margin-none">
                                             <div class="media">
@@ -45,11 +45,11 @@
                                                     <a href="enviaSenha.html" class="small pull-right">Esqueceu?</a>
                                                 </div>
                                             </div>
-                                            <input type="password" class="form-control" name="password" id="password" placeholder="Insira a senha">
+                                            <input type="password" class="form-control" name="password" id="passSenha" placeholder="Insira a senha">
                                         </div>
                                     </div><br />
                                     <div class="form-group text-center">
-                                        <button type="button" class="btn btn-primary">Login&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-unlock-alt"></i></button>
+                                        <button type="button" class="btn btn-primary" id="btnLogin">Login&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-unlock-alt"></i></button>
                                         <button type="button" class="btn btn-primary" onclick="location.href='cadastro.html'">Cadastro&nbsp;&nbsp;&nbsp;<i class="fa fa-user"></i></button>
                                     </div>
                                 </form> 
