Desenvolvendo a funcionalidade de login

--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
         <!-- App Scripts -->
         <script src="app_assets/js/scripts.js"></script>
 
+        <!-- Login -->
+        <script src="app_assets/js/login.js"></script>
+
     </body>
 </html>
