--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     	<link href="http://fooddelivery.viavilab.com/upload/favicon.png" rel="shortcut icon" type="image/x-icon" />
     	<link rel="stylesheet" href="app_assets/css/style.css">
     	<script src="app_assets/js/jquery.js"></script>
-        <script src="app_assets/js/login.js"></script>
 
     	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     	<!--[if lt IE 9]>
     	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    	<![endif]--->
+    	<![endif]-->
 
     </head>
     <body>
@@ -66,6 +65,9 @@
 
         <!-- App Scripts -->
         <script src="app_assets/js/scripts.js"></script>
+
+        <!-- LoginAPP -->
+        <script src="app_assets/js/login.js"></script>
 
     </body>
 </html>
