--- a/cadastro.html
+++ b/cadastro.html
@@ -34,19 +34,19 @@
                   </div>
                   <div class="form-group">
                     <label>Nome</label>
-                    <input type="text" class="form-control" id="first_name" name="first_name" value="" placeholder="Insira o nome">
+                    <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome">
                   </div>
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Usuário</label>
-                        <input type="text" id="password" name="password" value="" class="form-control" placeholder="Insira o usuário">
+                        <input type="text" id="txtUsuario" name="password" value="" class="form-control" placeholder="Insira o usuário">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Senha</label>
-                        <input type="password" id="password_confirmation" name="password_confirmation" value="" class="form-control" placeholder="Insira a senha">
+                        <input type="password" id="passSenha" name="password_confirmation" value="" class="form-control" placeholder="Insira a senha">
                       </div>
                     </div>
                   </div>
@@ -55,62 +55,62 @@
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>CEP</label>
-                        <input type="text" id="password" name="password" value="" class="form-control" placeholder="Insira o CEP">
+                        <input type="text" id="txtCEP" name="password" value="" class="form-control" placeholder="Insira o CEP">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>UF</label>
-                        <input type="text" id="password_confirmation" name="password_confirmation" value="" class="form-control" placeholder="--" disabled>
+                        <input type="text" id="txtUF" name="password_confirmation" value="" class="form-control" placeholder="--" disabled>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
                     <label>Logradouro</label>
-                    <input type="text" class="form-control" id="last_name" value="" name="last_name" placeholder="--" disabled>
+                    <input type="text" class="form-control" id="txtLogradouro" value="" name="last_name" placeholder="--" disabled>
                   </div>
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Número</label>
-                        <input type="text" id="password" name="password" value="" class="form-control" placeholder="Insira o número">
+                        <input type="text" id="txtNumero" name="password" value="" class="form-control" placeholder="Insira o número">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Complemento</label>
-                        <input type="text" id="password_confirmation" name="password_confirmation" value="" class="form-control" placeholder="Insira o complemento">
+                        <input type="text" id="txtComplemento" name="password_confirmation" value="" class="form-control" placeholder="Insira o complemento">
                       </div>
                     </div>
                   </div>          
                   <div class="form-group">
                     <label>Bairro</label>
-                    <input type="text" id="email" name="email" value="" class="form-control" placeholder="--" disabled>
+                    <input type="text" id="txtBairro" name="email" value="" class="form-control" placeholder="--" disabled>
                   </div>
                   <div class="form-group">
                     <label>Cidade</label>
-                    <input type="text" id="email" name="email" value="" class="form-control" placeholder="--" disabled>
+                    <input type="text" id="txtCidade" name="email" value="" class="form-control" placeholder="--" disabled>
                   </div>
                   <hr />
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>DDD</label>
-                        <input type="text" id="password" name="password" value="" class="form-control" placeholder="Insira o DDD">
+                        <input type="text" id="txtDDD" name="password" value="" class="form-control" placeholder="Insira o DDD">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Celular</label>
-                        <input type="text" id="password_confirmation" name="password_confirmation" value="" class="form-control" placeholder="Insira o celular">
+                        <input type="text" id="txtCelular" name="password_confirmation" value="" class="form-control" placeholder="Insira o celular">
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
                     <label>E-mail</label>
-                    <input type="text" id="email" name="email" value="" class="form-control" placeholder="Insira o e-mail">
+                    <input type="text" id="txtEmail" name="email" value="" class="form-control" placeholder="Insira o e-mail">
                   </div>
-                  <button type="button" class="btn btn-submit">Cadastrar&nbsp;&nbsp;<i class="fa fa-user"></i></button>
+                  <button type="button" class="btn btn-submit" id="btnCadastrar">Cadastrar&nbsp;&nbsp;<i class="fa fa-user"></i></button>
                   <button type="button" class="btn btn-submit" onclick="location.href='index.html'">Voltar&nbsp;&nbsp;&nbsp;<i class="fa fa-undo"></i></button>
                 </form>
               </div>
@@ -132,6 +132,7 @@
       <script src="app_assets/js/own-menu.js"></script>  
       <script src="app_assets/js/main.js"></script> 
       <script src="app_assets/js/functions.js"></script>
+      <script src="app_assets/js/cadastro.js"></script>
     </div>
   </body>
 </html>
