--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     <link href="app_assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/responsive.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="app_assets/js/jquery-1.11.0.min.js"></script>
+    <script src="app_assets/js/jquery.js"></script>
   </head>
   <body> 
     <div id="wrap" class="home-1">
@@ -122,6 +122,7 @@
         </div>
       </div>
 
+      <script src="app_assets/js/jquery-1.11.0.min.js"></script>
       <script src="app_assets/js/bootstrap.min.js"></script>
       <script src="app_assets/js/jquery.flexslider-min.js"></script> 
       <script src="app_assets/js/jquery.nouislider.min.js"></script>
