--- a/cadastro.html
+++ b/cadastro.html
@@ -132,7 +132,7 @@
       <script src="app_assets/js/wow.min.js"></script> 
       <script src="app_assets/js/own-menu.js"></script>  
       <script src="app_assets/js/main.js"></script> 
-      <script src="app_assets/js/functions.js"></script>
+      <!--<script src="app_assets/js/functions.js"></script>-->
       <script src="app_assets/js/cadastro.js"></script>
     </div>
   </body>
