--- a/cadastro.html
+++ b/cadastro.html
@@ -33,7 +33,7 @@
                     <!---->
                   </div>
                   <div class="form-group">
-                    <label>Nome</label>
+                    <label>Nome <b style="color: red;">*</b></label>
                     <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome" maxlength="100">
                   </div>
                   <div class="row">
