--- a/cadastro.html
+++ b/cadastro.html
@@ -39,13 +39,13 @@
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>Usuário</label>
+                        <label>Usuário <b style="color: red;">*</b></label>
                         <input type="text" id="txtUsuario" name="password" value="" class="form-control" placeholder="Insira o usuário" maxlength="50">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>Senha</label>
+                        <label>Senha <b style="color: red;">*</b></label>
                         <input type="password" id="passSenha" name="password_confirmation" value="" class="form-control" placeholder="Insira a senha">
                       </div>
                     </div>
@@ -54,25 +54,29 @@
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>CEP</label>
+                        <label>CEP <b style="color: red;">*</b></label>
                         <input type="text" id="txtCEP" name="password" value="" class="form-control" placeholder="Insira o CEP" maxlength="8">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>UF</label>
+                        <label>UF <b style="color: red;">*</b></label>
                         <input type="text" id="txtUF" name="password_confirmation" value="" class="form-control" placeholder="--" disabled>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label>Logradouro</label>
+                    <label>Logradouro <b style="color: red;">*</b></label>
                     <input type="text" class="form-control" id="txtLogradouro" value="" name="last_name" placeholder="--" disabled>
                   </div>
                   <div class="row">
+                    <b style="color: red;">*</b> Campos de preenchimento obrigatório.
+                  </div>
+                  <hr />
+                  <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>Número</label>
+                        <label>Número <b style="color: red;">*</b></label>
                         <input type="text" id="txtNumero" name="password" value="" class="form-control" placeholder="Insira o número" maxlength="6">
                       </div>
                     </div>
@@ -84,30 +88,30 @@
                     </div>
                   </div>          
                   <div class="form-group">
-                    <label>Bairro</label>
+                    <label>Bairro <b style="color: red;">*</b></label>
                     <input type="text" id="txtBairro" name="email" value="" class="form-control" placeholder="--" disabled>
                   </div>
                   <div class="form-group">
-                    <label>Cidade</label>
+                    <label>Cidade <b style="color: red;">*</b></label>
                     <input type="text" id="txtCidade" name="email" value="" class="form-control" placeholder="--" disabled>
                   </div>
                   <hr />
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>DDD</label>
+                        <label>DDD <b style="color: red;">*</b></label>
                         <input type="text" id="txtDDD" name="password" value="" class="form-control" placeholder="Insira o DDD" maxlength="2">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
-                        <label>Celular</label>
+                        <label>Celular <b style="color: red;">*</b></label>
                         <input type="text" id="txtCelular" name="password_confirmation" value="" class="form-control" placeholder="Insira o celular" maxlength="9">
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label>E-mail</label>
+                    <label>E-mail <b style="color: red;">*</b></label>
                     <input type="text" id="txtEmail" name="email" value="" class="form-control" placeholder="Insira o e-mail" maxlength="100">
                   </div>
                   <button type="button" class="btn btn-submit" id="btnCadastrar">Cadastrar&nbsp;&nbsp;<i class="fa fa-user"></i></button>
