--- a/cadastro.html
+++ b/cadastro.html
@@ -32,6 +32,10 @@
                   <div class="message">
                     <!---->
                   </div>
+                  <div class="form-group" align="right">
+                    <b style="color: red;">*</b> Campos de preenchimento obrigatório.
+                  </div>
+                  <hr />
                   <div class="form-group">
                     <label>Nome <b style="color: red;">*</b></label>
                     <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome" maxlength="100">
@@ -69,10 +73,6 @@
                     <label>Logradouro <b style="color: red;">*</b></label>
                     <input type="text" class="form-control" id="txtLogradouro" value="" name="last_name" placeholder="--" disabled>
                   </div>
-                  <div class="row">
-                    <b style="color: red;">*</b> Campos de preenchimento obrigatório.
-                  </div>
-                  <hr />
                   <div class="row">
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
