--- a/cadastro.html
+++ b/cadastro.html
@@ -39,17 +39,21 @@
                     <label>Nome <b style="color: red;">*</b></label>
                     <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome" maxlength="100">
                   </div>
+                  <div class="form-group">
+                    <label>Usuário <b style="color: red;">*</b></label>
+                    <input type="text" id="txtUsuario" name="password" value="" class="form-control" placeholder="Insira o usuário" maxlength="50">
+                  </div>
                   <div class="row">
-                    <div class="col-md-6 col-sm-6">
-                      <div class="form-group">
-                        <label>Usuário <b style="color: red;">*</b></label>
-                        <input type="text" id="txtUsuario" name="password" value="" class="form-control" placeholder="Insira o usuário" maxlength="50">
-                      </div>
-                    </div>
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Senha <b style="color: red;">*</b></label>
                         <input type="password" id="passSenha" name="password_confirmation" value="" class="form-control" placeholder="Insira a senha">
+                      </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                      <div class="form-group">
+                        <label>Confirmação de Senha <b style="color: red;">*</b></label>
+                        <input type="password" id="passConfirmaSenha" name="password_confirmation" value="" class="form-control" placeholder="Confirme a senha">
                       </div>
                     </div>
                   </div>
