--- a/cadastro.html
+++ b/cadastro.html
@@ -37,7 +37,7 @@
                   </div>
                   <div class="form-group">
                     <label>Nome <b style="color: red;">*</b></label>
-                    <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome" maxlength="100">
+                    <input type="text" class="form-control" id="txtNome" name="first_name" value="" placeholder="Insira o nome" maxlength="100" onkeypress="return Onlychars(event);">
                   </div>
                   <div class="form-group">
                     <label>Usuário <b style="color: red;">*</b></label>
