Inserindo validações de dados cadastrais

--- a/cadastro.html
+++ b/cadastro.html
@@ -80,7 +80,7 @@
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>Número <b style="color: red;">*</b></label>
-                        <input type="text" id="txtNumero" name="password" value="" class="form-control" placeholder="Insira o número" maxlength="6">
+                        <input type="text" id="txtNumero" name="password" value="" class="form-control" placeholder="Insira o número" maxlength="6" onkeypress="return Onlynumbers(event);">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
