Inserindo validações de dados cadastrais

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,6 +18,12 @@
     <link href="app_assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/responsive.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--Scripts-->
+    <script src="app_assets/js/jquery-1.11.0.min.js"></script>
+    <script src="app_assets/js/jquery.flexslider-min.js"></script> 
+    <script src="app_assets/js/jquery.nouislider.min.js"></script>
+    <script src="app_assets/js/jquery.sticky.js"></script> 
+    <script src="app_assets/js/jquery.stellar.js"></script>
   </head>
   <body> 
     <div id="wrap" class="home-1">
@@ -129,12 +135,7 @@
         </div>
       </div>
 
-      <script src="app_assets/js/jquery-1.11.0.min.js"></script>
       <script src="app_assets/js/bootstrap.min.js"></script>
-      <script src="app_assets/js/jquery.flexslider-min.js"></script> 
-      <script src="app_assets/js/jquery.nouislider.min.js"></script>
-      <script src="app_assets/js/jquery.sticky.js"></script> 
-      <script src="app_assets/js/jquery.stellar.js"></script> 
       <script src="app_assets/js/owl.carousel.min.js"></script> 
       <script src="app_assets/js/wow.min.js"></script> 
       <script src="app_assets/js/own-menu.js"></script>  
