Inserindo validações de dados cadastrais

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,12 +18,6 @@
     <link href="app_assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/responsive.css" rel="stylesheet" type="text/css">
     <link href="app_assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!--Scripts-->
-    <script src="app_assets/js/jquery-1.11.0.min.js"></script>
-    <script src="app_assets/js/jquery.flexslider-min.js"></script> 
-    <script src="app_assets/js/jquery.nouislider.min.js"></script>
-    <script src="app_assets/js/jquery.sticky.js"></script> 
-    <script src="app_assets/js/jquery.stellar.js"></script>
   </head>
   <body> 
     <div id="wrap" class="home-1">
@@ -136,6 +130,11 @@
       </div>
 
       <script src="app_assets/js/bootstrap.min.js"></script>
+      <script src="app_assets/js/jquery-1.11.0.min.js"></script>
+      <script src="app_assets/js/jquery.flexslider-min.js"></script> 
+      <script src="app_assets/js/jquery.nouislider.min.js"></script>
+      <script src="app_assets/js/jquery.sticky.js"></script> 
+      <script src="app_assets/js/jquery.stellar.js"></script>
       <script src="app_assets/js/owl.carousel.min.js"></script> 
       <script src="app_assets/js/wow.min.js"></script> 
       <script src="app_assets/js/own-menu.js"></script>  
@@ -143,6 +142,7 @@
       <script src="app_assets/js/cadastro.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
       <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
     </div>
   </body>
 </html>
