--- a/cadastro.html
+++ b/cadastro.html
@@ -103,7 +103,7 @@
                     <div class="col-md-6 col-sm-6">
                       <div class="form-group">
                         <label>DDD <b style="color: red;">*</b></label>
-                        <input type="text" id="txtDDD" name="password" value="" class="form-control" placeholder="Insira o DDD" maxlength="2">
+                        <input type="text" id="txtDDD" name="password" value="" class="form-control" placeholder="Insira o DDD" maxlength="2" onkeypress="return Onlynumbers(event);">
                       </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
