--- a/cadastro.html
+++ b/cadastro.html
@@ -105,73 +105,73 @@
                         <label>DDD <b style="color: red;">*</b></label>
                         <select id="selDDD" class="form-control">
                           <option value="">--</option>
-                          <option value="11">11</option>
-                          <option value="12">12</option>
-                          <option value="13">13</option>
-                          <option value="14">14</option>
-                          <option value="15">15</option>
-                          <option value="16">16</option>
-                          <option value="17">17</option>
-                          <option value="18">18</option>
-                          <option value="19">19</option>
-                          <option value="21">21</option>
-                          <option value="22">22</option>
-                          <option value="24">24</option>
-                          <option value="27">27</option>
-                          <option value="28">28</option>
-                          <option value="31">31</option>
-                          <option value="32">32</option>
-                          <option value="33">33</option>
-                          <option value="34">34</option>
-                          <option value="35">35</option>
-                          <option value="37">37</option>
-                          <option value="38">38</option>
-                          <option value="41">41</option>
-                          <option value="42">42</option>
-                          <option value="43">43</option>
-                          <option value="44">44</option>
-                          <option value="45">45</option>
-                          <option value="46">46</option>
-                          <option value="47">47</option>
-                          <option value="48">48</option>
-                          <option value="49">49</option>
-                          <option value="51">51</option>
-                          <option value="53">53</option>
-                          <option value="54">54</option>
-                          <option value="55">55</option>
-                          <option value="61">61</option>
-                          <option value="62">62</option>
-                          <option value="63">63</option>
-                          <option value="64">64</option>
-                          <option value="65">65</option>
-                          <option value="66">66</option>
-                          <option value="67">67</option>
-                          <option value="68">68</option>
-                          <option value="69">69</option>
-                          <option value="71">71</option>
-                          <option value="73">73</option>
-                          <option value="74">74</option>
-                          <option value="75">75</option>
-                          <option value="77">77</option>
-                          <option value="79">79</option>
-                          <option value="81">81</option>
-                          <option value="82">82</option>
-                          <option value="83">83</option>
-                          <option value="84">84</option>
-                          <option value="85">85</option>
-                          <option value="86">86</option>
-                          <option value="87">87</option>
-                          <option value="88">88</option>
-                          <option value="89">89</option>
-                          <option value="91">91</option>
-                          <option value="92">92</option>
-                          <option value="93">93</option>
-                          <option value="94">94</option>
-                          <option value="95">95</option>
-                          <option value="96">96</option>
-                          <option value="97">97</option>
-                          <option value="98">98</option>
-                          <option value="99">99</option>
+                          <option value="11">11 – São Paulo – SP</option>
+                          <option value="12">12 – São José dos Campos – SP</option>
+                          <option value="13">13 – Santos – SP</option>
+                          <option value="14">14 – Bauru – SP</option>
+                          <option value="15">15 – Sorocaba – SP</option>
+                          <option value="16">16 – Ribeirão Preto – SP</option>
+                          <option value="17">17 – São José do Rio Preto – SP</option>
+                          <option value="18">18 – Presidente Prudente – SP</option>
+                          <option value="19">19 – Campinas – SP</option>
+                          <option value="21">21 – Rio de Janeiro – RJ</option>
+                          <option value="22">22 – Campos dos Goytacazes – RJ</option>
+                          <option value="24">24 – Volta Redonda – RJ</option>
+                          <option value="27">27 – Vila Velha/Vitória – ES</option>
+                          <option value="28">28 – Cachoeiro de Itapemirim – ES</option>
+                          <option value="31">31 – Belo Horizonte – MG</option>
+                          <option value="32">32 – Juiz de Fora – MG</option>
+                          <option value="33">33 – Governador Valadares – MG</option>
+                          <option value="34">34 – Uberlândia – MG</option>
+                          <option value="35">35 – Poços de Caldas – MG</option>
+                          <option value="37">37 – Divinópolis – MG</option>
+                          <option value="38">38 – Montes Claros – MG</option>
+                          <option value="41">41 – Curitiba – PR</option>
+                          <option value="42">42 – Ponta Grossa – PR</option>
+                          <option value="43">43 – Londrina – PR</option>
+                          <option value="44">44 – Maringá – PR</option>
+                          <option value="45">45 – Foz do Iguaçú – PR</option>
+                          <option value="46">46 – Francisco Beltrão/Pato Branco – PR</option>
+                          <option value="47">47 – Joinville – SC</option>
+                          <option value="48">48 – Florianópolis – SC</option>
+                          <option value="49">49 – Chapecó – SC</option>
+                          <option value="51">51 – Porto Alegre – RS</option>
+                          <option value="53">53 – Pelotas – RS</option>
+                          <option value="54">54 – Caxias do Sul – RS</option>
+                          <option value="55">55 – Santa Maria – RS</option>
+                          <option value="61">61 – Brasília – DF</option>
+                          <option value="62">62 – Goiânia – GO</option>
+                          <option value="63">63 – Palmas – TO</option>
+                          <option value="64">64 – Rio Verde – GO</option>
+                          <option value="65">65 – Cuiabá – MT</option>
+                          <option value="66">66 – Rondonópolis – MT</option>
+                          <option value="67">67 – Campo Grande – MS</option>
+                          <option value="68">68 – Rio Branco – AC</option>
+                          <option value="69">69 – Porto Velho – RO</option>
+                          <option value="71">71 – Salvador – BA</option>
+                          <option value="73">73 – Ilhéus – BA</option>
+                          <option value="74">74 – Juazeiro – BA</option>
+                          <option value="75">75 – Feira de Santana – BA</option>
+                          <option value="77">77 – Barreiras – BA</option>
+                          <option value="79">79 – Aracaju – SE</option>
+                          <option value="81">81 – Recife – PE</option>
+                          <option value="82">82 – Maceió – AL</option>
+                          <option value="83">83 – João Pessoa – PB</option>
+                          <option value="84">84 – Natal – RN</option>
+                          <option value="85">85 – Fortaleza – CE</option>
+                          <option value="86">86 – Teresina – PI</option>
+                          <option value="87">87 – Petrolina – PE</option>
+                          <option value="88">88 – Juazeiro do Norte – CE</option>
+                          <option value="89">89 – Picos – PI</option>
+                          <option value="91">91 – Belém – PA</option>
+                          <option value="92">92 – Manaus – AM</option>
+                          <option value="93">93 – Santarém – PA</option>
+                          <option value="94">94 – Marabá – PA</option>
+                          <option value="95">95 – Boa Vista – RR</option>
+                          <option value="96">96 – Macapá – AP</option>
+                          <option value="97">97 – Coari – AM</option>
+                          <option value="98">98 – São Luís – MA</option>
+                          <option value="99">99 – Imperatriz – MA</option>
                         </select>
                       </div>
                     </div>
