Inserindo regras de login

--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
         <!-- LoginAPP -->
         <script src="app_assets/js/login.js"></script>
 
+        <!-- SweetAlert -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+
     </body>
 </html>
