--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
                                        	<div class="message">
         									<!---->
                 						</div>
+                                        <div class="form-group" align="right">
+                                            <b style="color: red;">*</b> Campos de preenchimento obrigatório.
+                                        </div>
                                     	<div class="form-group">
-                                            <label for="email">Usuário</label>
+                                            <label for="email">Usuário <b style="color: red;">*</b></label>
                                             <input type="text" class="form-control" name="email" id="txtUsuario" placeholder="Insira o usuário">
                                         </div>
                                         <div class="form-group margin-none">
                                             <div class="media">
                                                 <div class="media-body media-middle">
-                                                    <label for="password">Senha</label>
+                                                    <label for="password">Senha <b style="color: red;">*</b></label>
                                                 </div>
                                                 <div class="media-right media-middle">
                                                     <a href="enviaSenha.html" class="small pull-right">Esqueceu?</a>
