--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         									<!---->
                 						</div>
                                         <div class="form-group" align="right">
-                                            <b style="color: red;">*</b> Campos de preenchimento obrigatório.
+                                            <b style="color: red;">*</b> Preenchimento obrigatório.
                                         </div>
                                     	<div class="form-group">
                                             <label for="email">Usuário <b style="color: red;">*</b></label>
