--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                             </div>
                                             <input type="password" class="form-control" name="password" id="passSenha" placeholder="Insira a senha">
                                         </div>
-                                        <div class="form-group" align="right">
+                                        <div class="form-group margin-none" align="right">
                                             <b style="color: red;">*</b> Preenchimento obrigatório.
                                         </div>
                                     </div><br />
