--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                             <input type="password" class="form-control" name="password" id="passSenha" placeholder="Insira a senha">
                                         </div>
                                         <br />
-                                        <div class="form-group margin-none" align="right">
+                                        <div class="form-group margin-none" align="center">
                                             <b style="color: red;">*</b> Preenchimento obrigatório.
                                         </div>
                                     </div><br />
