Inserindo regras de login

--- a/enviaSenha.html
+++ b/enviaSenha.html
@@ -32,9 +32,16 @@
                                        	<div class="message">
                 							<!---->
                 					    </div>
-                                        <div class="form-group">
-                                            <label for="email">Endereço de e-mail</label>
-                                            <input type="email" class="form-control" name="email" id="email" placeholder="Insira o e-mail">
+                                        <div class="form-group margin-none">
+                                            <div class="media">
+                                                <div class="media-body media-middle">
+                                                    <label for="password">Senha <b style="color: red;">*</b></label>
+                                                </div>
+                                                <div class="media-right media-middle">
+                                                    <a href="enviaSenha.html" class="small pull-right">Esqueceu?</a>
+                                                </div>
+                                            </div>
+                                            <input type="password" class="form-control" name="password" id="passSenha" placeholder="Insira a senha">
                                         </div>
                                         <div class="form-group">                            
                                             <a href="index.html" class="small pull-right">Login?</a>
