--- a/enviaSenha.html
+++ b/enviaSenha.html
@@ -35,16 +35,13 @@
                                         <div class="form-group margin-none">
                                             <div class="media">
                                                 <div class="media-body media-middle">
-                                                    <label for="password">Senha <b style="color: red;">*</b></label>
+                                                    <label for="password">E-mail</label>
                                                 </div>
                                                 <div class="media-right media-middle">
-                                                    <a href="enviaSenha.html" class="small pull-right">Esqueceu?</a>
+                                                    <a href="index.html" class="small pull-right">Login?</a>
                                                 </div>
                                             </div>
-                                            <input type="password" class="form-control" name="password" id="passSenha" placeholder="Insira a senha">
-                                        </div>
-                                        <div class="form-group">                            
-                                            <a href="index.html" class="small pull-right">Login?</a>
+                                            <input type="text" class="form-control" name="password" id="txtEmail" placeholder="Insira o e-mail">
                                         </div>
                                     </div>
                                     <div class="form-group text-center">
