--- a/enviaSenha.html
+++ b/enviaSenha.html
@@ -35,7 +35,7 @@
                                         <div class="form-group margin-none">
                                             <div class="media">
                                                 <div class="media-body media-middle">
-                                                    <label for="password">E-mail</label>
+                                                    <label for="password">E-mail <b style="color: red;">*</b></label>
                                                 </div>
                                                 <div class="media-right media-middle">
                                                     <a href="index.html" class="small pull-right">Login?</a>
@@ -44,6 +44,11 @@
                                             <input type="text" class="form-control" name="password" id="txtEmail" placeholder="Insira o e-mail">
                                         </div>
                                     </div>
+                                    <br />
+                                    <div class="form-group margin-none" align="center">
+                                        <b style="color: red;">*</b> Preenchimento obrigatório.
+                                    </div>
+                                    <br />
                                     <div class="form-group text-center">
                                         <button type="button" class="btn btn-primary">Enviar&nbsp;&nbsp;&nbsp;<i class="fa fa-paper-plane"></i></button>
                                     </div>
