--- a/enviaSenha.html
+++ b/enviaSenha.html
@@ -32,6 +32,10 @@
                                        	<div class="message">
                 							<!---->
                 					    </div>
+                                        <div class="form-group">
+                                            <label for="email">Usuário <b style="color: red;">*</b></label>
+                                            <input type="text" class="form-control" name="email" id="txtUsuario" placeholder="Insira o usuário">
+                                        </div>
                                         <div class="form-group margin-none">
                                             <div class="media">
                                                 <div class="media-body media-middle">
@@ -41,7 +45,7 @@
                                                     <a href="index.html" class="small pull-right">Login?</a>
                                                 </div>
                                             </div>
-                                            <input type="text" class="form-control" name="password" id="txtEmail" placeholder="Insira o e-mail">
+                                            <input type="text" class="form-control" name="password" id="txtEmail" placeholder="Insira o e-mail" maxlength="100">
                                         </div>
                                     </div>
                                     <div class="form-group margin-none" align="center">
@@ -49,7 +53,7 @@
                                     </div>
                                     <br />
                                     <div class="form-group text-center">
-                                        <button type="button" class="btn btn-primary">Enviar&nbsp;&nbsp;&nbsp;<i class="fa fa-paper-plane"></i></button>
+                                        <button type="button" class="btn btn-primary" id="btnEnviar">Enviar&nbsp;&nbsp;&nbsp;<i class="fa fa-paper-plane"></i></button>
                                     </div>
                                 </form> 
                             </div>
@@ -64,6 +68,12 @@
 
         <!-- App Scripts -->
         <script src="app_assets/js/scripts.js"></script>
+
+        <!-- enviaSenha -->
+        <script src="app_assets/js/enviaSenha.js"></script>
+
+        <!-- SweetAlert -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 
     </body>
 </html>
