--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 						</div>
                                     	<div class="form-group">
                                             <label for="email">Usuário <b style="color: red;">*</b></label>
-                                            <input type="text" class="form-control" name="email" id="txtUsuario" placeholder="Insira o usuário">
+                                            <input type="text" class="form-control" name="email" id="txtUsuario" placeholder="Insira o usuário" maxlength="50">
                                         </div>
                                         <div class="form-group margin-none">
                                             <div class="media">
